# nds-test

./: .gitignore  CMakeLists.txt  README.md
arm7/: CMakeLists.txt  main-arm7.cpp
arm9/: CMakeLists.txt  init.cpp  init.hpp  main-arm9.cpp
cmake/: nds.macro.cmake  nds.platform.cmake
shared/: CMakeLists.txt  dsutils.hpp  example.cpp  example.hpp
